--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 	body {
-
-	}
+    margin: 0px;
+    padding: 0px;
+    font-family: sans-serif;
+}
 
 	h1 {
 		text-align: center;
@@ -15,13 +17,19 @@
 	}
 
 	.imgindex {
-
+		margin: 10px;
 	}
 
 	#principal {
-		
+
 	}
 
 	* {
 		background-color: rgb(255, 245, 233);
 	}
+
+	body {
+    margin: 0px;
+    padding: 0px;
+    font-family: sans-serif;
+}
