--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
 		height: 75px;
 		box-shadow: 5px 5px 10px hsl(0, 0%, 83%);
 		display: block;
-		margin: 10px;
+		margin: auto 10px;
 		border-width: 1px;
 		font-size: 15px;
 		text-transform: uppercase;
