--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
 	}
 
 	button {
-		background-color: #fff9e3;
+		background-color: #fffbeb;
 		text-align: center;
 		width: 150px;
 		height: 75px;
